--- a/src/container/AiEditor/AiEditor.css
+++ b/src/container/AiEditor/AiEditor.css
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     /* transform: translate(-50%,-50%); */
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
     background-color: rgba(0,0,0,0.4);
 
