--- a/src/App.css
+++ b/src/App.css
@@ -4,14 +4,18 @@
     justify-content: center;
     color: #fff;
     height: 100vh;
+    /* background: #354F52; */
+    background-image: linear-gradient(150deg, #ef4279f1, #3a48c6);
 }
 
 .formWrapper {
-    background: #282a36;
-    padding: 20px;
+    background: #232c3363;
+    backdrop-filter: blur(20);
     border-radius: 10px;
-    width: 400px;
+    width: 450px;
     max-width: 90%;
+    padding: 3rem 2rem;
+    /* box-shadow: 0px 0px 20px #443636; */
 }
 
 footer {
@@ -31,11 +35,7 @@ footer a {
 .mainLabel {
     margin-bottom: 20px;
     margin-top: 0;
-}
-
-.homePageLogo {
-    height: 80px;
-    margin-bottom: 30px;
+    font-size: 1.6rem;
 }
 
 .inputBox {
@@ -47,28 +47,31 @@ footer a {
     background: #eee;
     font-size: 16px;
     font-weight: bold;
+    color: #3a48c6;
 }
 
 .btn {
     border: none;
-    padding: 10px;
+    padding: 0.5rem 2rem;
     border-radius: 5px;
-    font-size: 16px;
+    font-size: 1.2rem;
     font-weight: bold;
     cursor: pointer;
-    transition: all 0.3s ease-in-out;
+    transition: all 0.2s ease-in-out;
+    color: white;
 }
 
 .joinBtn,
-.leaveBtn {
-    background: #4aed88;
-    width: 100px;
-    margin-left: auto;
+.leaveBtn,
+.text_submit {
+    background: #5fb1e7;
+    margin: 0 auto;
+    font-weight: 900;
 }
 
 .joinBtn:hover,
 .leaveBtn:hover {
-    background: #2b824c;
+    background: #21e76d;
 }
 
 .createInfo {
@@ -76,17 +79,23 @@ footer a {
     margin-top: 20px;
 }
 
+.createIDButton {
+    background-color: transparent;
+    border: none;
+}
+
 .createNewBtn {
-    color: #4aed88;
+    color: white;
     text-decoration: none;
-    border-bottom: 1px solid #4aed88;
-    transition: all 0.3s ease-in-out;
+    font-size: 1.1rem;
+    border-bottom: 1px solid white;
+    transition: all 0.2s ease-in-out;
 }
 
 .createNewBtn:hover,
 footer a:hover {
-    color: #368654;
-    border-color: #368654;
+    color: #72f0a2;
+    border-color: #72f0a2;
 }
 
 .mainWrap {
@@ -95,21 +104,32 @@ footer a:hover {
 }
 
 .aside {
-    background: #1c1e29;
+    /* background: #1c1e29; */
     padding: 16px;
     color: #fff;
     display: flex;
     flex-direction: column;
+    background-color: #658f9d;
+    align-items: center;
 }
 .asideInner {
-    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    font-size: 1.1rem;
+    text-transform: uppercase;
+  
 }
 
 .clientsList {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
+    width: 100%;
     gap: 20px;
+    margin-top: 30px;
 }
 
 .client {
@@ -140,4 +160,24 @@ footer a:hover {
     font-size: 20px;
     line-height: 1.6;
     padding-top: 20px;
+}
+
+.realtimeEditor {
+    background-color: #fff;
+}
+
+.response {
+    display: flex;
+    flex-direction: column;
+    overflow-x: scroll;
+    gap: 1rem;
+}
+
+.question {
+    max-width: 80%;
+    align-self: flex-end;
+    background-color: #6eada2;
+    padding: 1rem;
+    border-radius: 15px;
+    margin-top: 10px;
 }
