--- a/src/container/AiEditor/AiEditor.css
+++ b/src/container/AiEditor/AiEditor.css
@@ -1,14 +1,124 @@
-.overlay{
+.overlay {
     position: absolute;
-    top: 0;
-    left: 0;
+    right: 30px;
+    bottom: 30px;
+    border-radius: 20px;
     /* transform: translate(-50%,-50%); */
-    min-height: 100vh;
-    width: 100vw;
-    background-color: rgba(0,0,0,0.4);
+    height: 100vh;
+    width: 80vw;
+    background-color: rgba(0, 0, 0, 0.4);
+    background-color: #b0a8dba1;
 
     z-index: 100000;
     display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+    padding: 2rem;
+    color: white;
+}
+
+.use_ai_btn {
+    position: absolute;
+    bottom: 50px;
+    right: 50px;
+    cursor: pointer;
+    border-radius: 1000px;
+    padding: 5px;
+    z-index: 999;
+    font-size: 3rem;
+    display: flex;
     justify-content: center;
     align-items: center;
+    color: white;
+}
+
+.top_section {
+    display: flex;
+    justify-content: space-between;
+    font-size: 2rem;
+}
+
+.overlay_response {
+    font-size: 1rem;
+    height: 100%;
+    overflow: auto;
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
+}
+
+
+.overlay_heading {
+    /* align-self: baseline; */
+    font-size: 3rem;
+}
+
+.text__field {
+    display: flex;
+    padding: 0.3rem 0.7rem;
+    background-color: White;
+    border-radius: 10px;
+}
+
+.text_input {
+    width: 100%;
+    font-size: 1.2rem;
+    background-color: transparent;
+    border: none;
+    outline: none;
+
+    &:disabled {
+        opacity: 0.6;
+        cursor: not-allowed;
+    }
+
+}
+
+.text_submit {
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    font-weight: 600;
+    color: white;
+    transition: 0.3s;
+
+    &:hover {
+        background-color: #5da779;
+    }
+
+    &:disabled {
+        opacity: 0.6;
+        cursor: not-allowed;
+    }
+}
+
+typing-dots {
+    display: inline-block;
+    animation: typing 1s infinite;
+}
+
+.typing-dots span {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    background-color: #3498db;
+    /* Adjust color as needed */
+    border-radius: 50%;
+    margin: 0 2px;
+}
+
+@keyframes typing {
+    0% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0.5;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
