--- a/src/App.css
+++ b/src/App.css
@@ -70,8 +70,18 @@ footer a {
 }
 
 .joinBtn:hover,
-.leaveBtn:hover {
+.copyBtn:hover{
     background: #21e76d;
+}
+
+.leaveBtn:hover{
+    background-color: rgb(214, 27, 27);
+}
+
+.copyBtn {
+    background: #bc89e2;
+    width: 100%;
+    padding: 0.65rem;
 }
 
 .createInfo {
@@ -101,15 +111,20 @@ footer a:hover {
 .mainWrap {
     display: grid;
     grid-template-columns: 230px 1fr;
+    height: 100vh;
+}
+
+.editorWrap {
+    height: 100%;
+    background-color: #263238;
 }
 
 .aside {
-    /* background: #1c1e29; */
     padding: 16px;
     color: #fff;
     display: flex;
     flex-direction: column;
-    background-color: #658f9d;
+    background-color: #344c54;
     align-items: center;
 }
 .asideInner {
@@ -128,7 +143,7 @@ footer a:hover {
     align-items: center;
     flex-wrap: wrap;
     width: 100%;
-    gap: 20px;
+    gap: 24px;
     margin-top: 30px;
 }
 
@@ -137,9 +152,14 @@ footer a:hover {
     align-items: center;
     flex-direction: column;
     font-weight: bold;
+    width: 50px;
+    
 }
 .userName {
     margin-top: 10px;
+    text-align: center;
+    text-wrap: wrap;
+    font-size: 0.6rem;
 }
 
 .logo {
@@ -169,7 +189,7 @@ footer a:hover {
 .response {
     display: flex;
     flex-direction: column;
-    overflow-x: scroll;
+    /* overflow-x: scroll; */
     gap: 1rem;
 }
 
