--- a/src/container/AiEditor/AiEditor.css
+++ b/src/container/AiEditor/AiEditor.css
@@ -30,6 +30,20 @@
     justify-content: center;
     align-items: center;
     color: white;
+
+    animation: up-down 1.5s infinite;
+}
+
+@keyframes up-down {
+    0% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(10px);
+    }
+    100% {
+        transform: translateY(0);
+    }
 }
 
 .top_section {
